# drill-vps-notify

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  发送消息接口说明.txt
docs/superpowers/plans/: 2026-06-30-vmiss-stock-monitor.md
docs/superpowers/specs/: 2026-06-30-vmiss-stock-monitor-design.md
scripts/: probe_public_page.py
src/vmiss_notify/: __init__.py  browser.py  cli.py  config.py  nodriver_browser.py  notifier.py  seleniumbase_bridge.py  stock.py
tests/: test_browser_notifications.py  test_browser_rules.py  test_cli.py  test_cloudflare.py  test_config.py  test_nodriver_browser.py  test_notifier.py  test_seleniumbase_bridge.py  test_stock.py
