[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "drill-vps-notify"
version = "0.1.0"
description = "VMISS VPS stock monitor and notifier"
requires-python = ">=3.10"
dependencies = ["playwright>=1.45.0", "seleniumbase>=4.30.0"]

[project.scripts]
vmiss-monitor = "vmiss_notify.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
